# tracks

./: Cargo.toml  Makefile
migrations/: 20250114195219_init.up.sql
server/: .env  Cargo.toml
server/migrations/: 20241220132715_init.up.sql  20241222132117_init.down.sql  20241222132117_init.up.sql
server/src/: Makefile  app.rs  auth.rs  error.rs  lib.rs  main.rs  oauth.rs
server/src/auth/: oauth.rs
server/src/handlers/: auth.rs
server/src/models/: user.rs
server/src/routes/: mod.rs
server/src/routes/v1/: auth.rs  mod.rs
server/tests/: common.rs  mod.rs  util.rs
server/tests/v1/auth/provider/: github.rs
src/: db.rs  error.rs  lib.rs  main.rs  server.rs  util.rs
src/handlers/: auth.rs
src/services/: auth.rs  user.rs
tests/: common.rs  mod.rs
tests/v1/auth/: provider.rs
