[package]
name = "server"
version = "0.1.0"
edition = "2021"

[features]
integration_test = []

[dependencies]
anyhow = "1.0.94"
axum = "0.7.9"
axum-test = "16.4.1"
cookie = "0.18.1"
dotenvy = "0.15.7"
httpmock = "0.7.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.8"
tokio = { version = "1.42.0", features = ["full"] }
